# sclab-app

./: .bumpversion.toml  .gitignore  BUILD.md  LICENSE.txt  README.md  chat_message.md  construct-min.yaml  construct-sanity.yaml  construct.yaml  environment-dev.yml  pyproject.toml  sclab_constructor_config.txt  sclab_notebook_examples.md
.github/workflows/: build-installers.yml
assets/: README.md
menu/: SCLab-App.json  sclab-app.json
notebooks/: README.md
scripts/: post_install.bat  post_install.sh  pre_uninstall.bat  pre_uninstall.sh  setup_sclab_app.py
setup/: remove_sclab_app.py  setup_sclab_app.py
src/sclab_app/: __init__.py  cli.py
src/sclab_app/resources/: README.md
src/sclab_app/resources/assets/: README.md
src/sclab_app/resources/notebooks/: Demo.ipynb  README.md
